# image-classification

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  RUNBOOK.md  pyproject.toml  requirements.txt
configs/: data.yaml  predict.yaml  train.yaml
eval/: evaluate.py
notebooks/: error_analysis.ipynb
scripts/: make_sample_dataset.py  make_sample_predictions.py
slurm/: hello.slurm  train.slurm
src/: __init__.py  common.py  data.py  error_analysis.py  gradcam.py  metrics.py  model.py  predict.py  schema.py  train.py
tests/: test_error_analysis.py  test_gradcam.py  test_metrics.py  test_schema.py
web/: explorer.py
