[project]
name = "image-classification"
version = "0.1.0"
description = "Image classification on a custom dataset with a deep focus on error analysis (timm + pure-NumPy metrics + confusion/calibration/Grad-CAM)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Shyngys Narseyit" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
train = ["torch>=2.2", "torchvision>=0.17", "timm>=1.0"]
viz = ["matplotlib>=3.8", "streamlit>=1.33"]
track = ["wandb>=0.16"]
dev = ["pytest>=8.0", "ruff>=0.4"]
all = [
  "torch>=2.2", "torchvision>=0.17", "timm>=1.0",
  "matplotlib>=3.8", "streamlit>=1.33", "wandb>=0.16",
  "pytest>=8.0", "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
